--- a/src/index.css
+++ b/src/index.css
@@ -49,10 +49,12 @@ ul {
   filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.26));
 }
 
-#header-title h1 {
+#header-title h1,
+#header-title h1 a {
   font-size: 1.5rem;
   color: #fff;
   text-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  text-decoration: none;
 }
 
 #main-header nav {
